# RecycleLens

./: .gitignore  README.md  SDLC_Waste_Classification.md  pyproject.toml
configs/: colab.yaml  default.yaml  fast.yaml
notebooks/: 01_explore.ipynb  colab_run.ipynb
scripts/: predict.py  train.py
src/waste_classification/: __init__.py  cli.py  config.py  dataset.py  infer.py  metrics.py  model.py  runtime.py  seed.py  train.py  transforms.py  validate_submission.py
tests/: test_config.py  test_dataset_resolve.py  test_discover_folds.py  test_discover_train.py  test_model.py  test_stratified_subset.py  test_transforms.py  test_validate_submission.py
