[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waste-classification"
version = "0.1.0"
description = "Automated Waste Classification System (EfficientNetV2-S, 5-fold)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "timm>=0.9",
    "albumentations>=1.4",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "PyYAML>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "jupyter>=1.0",
]

[project.scripts]
waste-train = "waste_classification.cli:train_main"
waste-predict = "waste_classification.cli:predict_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
